[tool.poetry]
name = "sports"
version = "1.0.0"
description = "\"Analytics Tool\""
authors = ["ok3ks <freelanceokeks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
gevent = "^24.2.1"

[tool.poetry.group.dev.dependencies]
python = ">=3.7"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.27"
pandas = "^1.3.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"