[tool.poetry]
name = "sports"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosignal = "1.3.1"
altair = "5.1.2"
appnope = "0.1.2"
argcomplete = "3.1.2"
asttokens = "2.0.5"
async-generator = "1.10"
async-timeout = "4.0.2"
attrs = "21.4.0"
backcall = "0.2.0"
blinker = "1.6.3"
blis = "0.7.8"
cachetools = "5.3.1"
catalogue = "2.0.7"
certifi = "2021.10.8"
charset-normalizer = "2.0.12"
contourpy = "1.1.1"
crcmod = "1.7"
cryptography = "41.0.4"
cycler = "0.11.0"
cymem = "2.0.6"
debugpy = "1.5.1"
decorator = "5.1.1"
entrypoints = "0.4"
et-xmlfile = "1.1.0"
exceptiongroup = "1.1.0"
executing = "0.8.3"
fasteners = "0.19"
filelock = "3.6.0"
fonttools = "4.29.1"
fsspec = "2023.6.0"
gcs-oauth2-boto-plugin = "3.0"
gitdb = "4.0.10"
gitpython = "3.1.37"
h11 = "0.14.0"
httplib2 = "0.20.4"
huggingface = "0.0.1"
huggingface-hub = "0.10.1"
humanize = "4.6.0"
idna = "3.3"
imhist = "0.0.4"
importlib-metadata = "5.0.0"
importlib-resources = "6.1.0"
imwatermark = "0.0.2"
ipython = "8.1.1"
ipython-genutils = "0.2.0"
jedi = "0.18.1"
jinja2 = "3.1.2"
jsonschema = "4.4.0"
jupyter-client = "7.1.2"
jupyter-core = "4.9.2"
kiwisolver = "1.3.2"
langchain = "0.0.276"
langcodes = "3.3.0"
langsmith = "0.0.29"
llama-index = "0.8.13"
markdown-it-py = "3.0.0"
markupsafe = "2.1.1"
marshmallow = "3.20.1"
matplotlib = "3.8.0"
matplotlib-inline = "0.1.3"
mdurl = "0.1.2"
monotonic = "1.6"
murmurhash = "1.0.7"
mypy-extensions = "1.0.0"
nbformat = "5.1.3"
nest-asyncio = "1.5.4"
numexpr = "2.8.5"
oauth2client = "4.1.3"
omegaconf = "2.2.3"
openpyxl = "3.0.10"
outcome = "1.2.0"
packaging = "21.3"
parso = "0.8.3"
pathy = "0.6.1"
pexpect = "4.8.0"
pickleshare = "0.7.5"
plotly = "5.13.0"
preshed = "3.0.6"
protobuf = "4.24.3"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pycparser = "2.21"
pydantic = "1.8.2"
pydeck = "0.8.1b0"
pygments = "2.16.1"
pyopenssl = "23.2.0"
pyparsing = "3.0.7"
pyqt6 = "6.4.2"
pyqt6-qt6 = "6.4.2"
pyqt6-sip = "13.4.1"
pyrsistent = "0.18.1"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
pytz = "2021.3"
pyu2f = "0.1.5"
regex = "2022.3.15"
requests = "^2.32.3"
retry-decorator = "1.1.1"
rich = "13.6.0"
rsa = "4.7.2"
sacremoses = "0.0.49"
seaborn = "0.12.2"
six = "1.16.0"
smart-open = "5.2.1"
smmap = "5.0.1"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
soupsieve = "2.4.1"
spacy-legacy = "3.0.9"
spacy-loggers = "1.0.2"
sqlalchemy = "2.0.20"
stack-data = "0.2.0"
tenacity = "8.2.3"
threadpoolctl = "3.1.0"
toml = "0.10.2"
toolz = "0.12.0"
tornado = "6.1"
tqdm = "4.64.0"
traitlets = "5.1.1"
trio = "0.22.0"
pytest = "^8.3.2"
pymysql = "^1.1.1"
ruff = "^0.6.1"
psycopg2 = "^2.9.9"
ipykernel = "6"
django = "^5.1"
ariadne = "^0.23.0"
ariadne-django = "^0.3.0"
django-cors-headers = "^4.4.0"
gunicorn = "^23.0.0"
django-livereload = "^1.7"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
